language/javascript/microservices/apps/blog/infra/k8s/client.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: hvitoi/blog-client

---
# ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
