language/javascript/microservices/apps/blog/infra/k8s/comments.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: comments-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: comments

  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: hvitoi/blog-comments

---
# ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 3000
      targetPort: 3000
